<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_activity"
    android:orientation="vertical">

    <include layout="@layout/title_lay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num" />

                <TextView
                    android:id="@+id/customer_detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/customer_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/customer_detail_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="所在地区" />

                <TextView
                    android:id="@+id/customer_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="意向商品" />

                <TextView
                    android:id="@+id/customer_intention_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="备注" />

                <TextView
                    android:id="@+id/customer_detail_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="经纪人" />

                <TextView
                    android:id="@+id/customer_invite_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="登记时间" />

                <TextView
                    android:id="@+id/customer_detail_addTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>

            <include layout="@layout/line_lay" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView

                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="注册时间" />

                <TextView
                    android:id="@+id/customer_detail_register_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/deep_black" />

            </LinearLayout>
            <include layout="@layout/line_lay" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>